Updated to MTAdmob 1.3 Added Xamarin.Google.iOS.MobileAds to iOS Added second page for test

--- a/TestMTAdmob/TestMTAdmob/MainPage.xaml
+++ b/TestMTAdmob/TestMTAdmob/MainPage.xaml
@@ -2,13 +2,19 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TestMTAdmob"
+             xmlns:controls="clr-namespace:MarcTron.Plugin.Controls;assembly=Plugin.MtAdmob"
              x:Class="TestMTAdmob.MainPage">
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <Label Text="This is a test for MTAdmob!" 
+               HorizontalOptions="Center"
+               VerticalOptions="CenterAndExpand" />
+
+        <Button Clicked="Button_OnClicked" Text="Next Page"></Button>
+
+        <controls:MTAdView PersonalizedAds="true"/>
+
     </StackLayout>
 
 </ContentPage>
