--- a/TestMTAdmob/TestMTAdmob/App.xaml
+++ b/TestMTAdmob/TestMTAdmob/App.xaml
@@ -1,8 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:MarcTron.Plugin.Controls;assembly=Plugin.MtAdmob"
              x:Class="TestMTAdmob.App">
     <Application.Resources>
-
+        <Style TargetType="controls:MTAdView">
+            <Setter Property="HeightRequest">
+                <Setter.Value>
+                    <x:OnIdiom Phone="50" Tablet="90"></x:OnIdiom>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
