--- a/TestMTAdmob/TestMTAdmob/SecondPage.xaml
+++ b/TestMTAdmob/TestMTAdmob/SecondPage.xaml
@@ -7,16 +7,31 @@
              mc:Ignorable="d"
              x:Class="TestMTAdmob.SecondPage">
     <ContentPage.Content>
-
-      <StackLayout>
-            <Label Text="Child Page for MTAdmob!"
-                 VerticalOptions="CenterAndExpand"
-                 HorizontalOptions="CenterAndExpand" />
-
-          <controls:MTAdView x:Name="myAds2" PersonalizedAds="false"/>
-
-            <Button Text="Show interstitial ad" Clicked="ShowInterstitialAd"/>
-            <Button Text="Show Rewarded ad" Clicked="ShowRewardedAd"/>
-        </StackLayout>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="Second Page!" 
+                   HorizontalOptions="Center"
+                   VerticalOptions="CenterAndExpand" />
+                <Label x:Name="myLabel" Text="" 
+                   HorizontalOptions="Center"
+                   VerticalOptions="CenterAndExpand" />
+                <!-- Place the Admob controls here -->
+                <controls:MTAdView x:Name="myAds" IsVisible="true" PersonalizedAds="true" AdsId="ca-app-pub-3940256099942544/6300978111" VerticalOptions="EndAndExpand" >
+                    <controls:MTAdView.HeightRequest>
+                        <x:OnIdiom>
+                            <x:OnIdiom.Phone>50</x:OnIdiom.Phone>
+                            <x:OnIdiom.Tablet>90</x:OnIdiom.Tablet>
+                            <x:OnIdiom.Desktop>90</x:OnIdiom.Desktop>
+                        </x:OnIdiom>
+                    </controls:MTAdView.HeightRequest>
+                </controls:MTAdView>
+                <Button Text="Load Reward" Clicked="LoadReward_OnClicked"></Button>
+                <Button Text="Show Reward" Clicked="ShowReward_OnClicked"></Button>
+                <Button Text="Is Reward Loaded" Clicked="IsRewardLoaded_OnClicked"></Button>
+                <Button Text="Load Interstitial" Clicked="LoadInterstitial_OnClicked"></Button>
+                <Button Text="Show Interstitial" Clicked="ShowInterstitial_OnClicked"></Button>
+                <Button Text="Is Interstitial Loaded" Clicked="IsLoadedInterstitial_OnClicked"></Button>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
